# porsche_pricing

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  WORKFLOW.md  config.py  pyproject.toml  requirements-advanced.txt  requirements-ci.txt  requirements.txt
.github/workflows/: tests.yml
app/: streamlit_app.py
data/: .gitkeep
elferspot_listings/: __init__.py
elferspot_listings/data_processing/: __init__.py  bronze_to_silver.py  combine_gold_datasets.py  silver_to_gold.py
elferspot_listings/evaluation/: __init__.py  metrics.py  reports.py
elferspot_listings/modeling/: __init__.py  baselines.py  benchmark_db.py  catboost_model.py  challengers.py  cli.py  feature_screening.py  features.py  persistence.py  price_inflation_ablation.py  train.py
elferspot_listings/models/: __init__.py
notebooks/: #VIF.ipynb  Catboost model.ipynb  ElasticNet.ipynb  Listings_bronzetosilver.ipynb  Predictive_regression.ipynb  Ridge.ipynb  scraping_notebook.ipynb
scripts/: check_notebook_hygiene.py  combine_gold_datasets.py  exchange_rates.py  price_inflation_ablation.py
tests/: conftest.py  test_benchmark_db.py  test_bronze_to_silver.py  test_catboost_config.py  test_challengers.py  test_combine_gold_datasets.py  test_dashboard_data.py  test_exchange_rates.py  test_feature_screening.py  test_metrics.py  test_modeling_baselines.py  test_modeling_cli.py  test_modeling_features.py  test_notebook_hygiene.py  test_persistence.py  test_price_inflation_ablation.py  test_pyproject.py  test_silver_to_gold.py  test_train_baselines.py
tests/fixtures/: README.md
(+34 files in other folders)
