[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elferspot-listings"
version = "0.1.0"
description = "Porsche listing price analytics, feature engineering, and model benchmarking."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "openpyxl>=3.0.0",
    "scikit-learn>=1.2.0",
    "catboost>=1.2.0",
    "skrub>=0.5.0",
    "skops>=0.10.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "plotly>=5.11.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "streamlit>=1.20.0",
    "optuna>=3.0.0",
    "tqdm>=4.64.0",
    "python-dateutil>=2.8.2",
    "selenium>=4.10.0",
    "webdriver-manager>=4.0.0",
]

[project.optional-dependencies]
advanced = [
    "tabpfn>=2.0.0",
    "tabpfn-client>=0.1.0",
    "autogluon.tabular>=1.2.0",
    "xgboost>=2.0.0",
    "perpetual>=0.4.0",
]
dev = [
    "pytest>=7.2.0",
    "nbstripout>=0.7.1",
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",
]
ci = [
    "pytest>=7.2.0",
]

[project.scripts]
elferspot-benchmark = "elferspot_listings.modeling.cli:main"

[tool.setuptools]
py-modules = ["config"]

[tool.setuptools.packages.find]
include = ["elferspot_listings*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
